# Yodi

./: .gitattributes  LICENSE  README.md  Yodi.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/workflows/: publish.yaml  python-package.yml
UNKNOWN.egg-info/: top_level.txt
Yodi_Umbaji.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
yodis/: Yodi.py  __init__.py
