[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yodi-umbaji"
version = "0.0.1"
description = "Yodi: Ewe to English and French translation application"
license = { text = "MIT" }

dependencies = [
    "pathlib",
    "tensorflow",
    "matplotlib>=3.4.3",
    "numpy>=1.21.2",
    "seaborn>=0.11.2",
    "IPython>=7.28.0",
    "gradio>=4.26.0"
]

[project.urls]
homepage = "https://example.com/Yodi"
repository = "https://github.com/umbaji/Yodi"