[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yodi_umbaji"
version = "0.0.3"
description = "Yodi: Ewe to English and French translation application"
license = { text = "MIT" }

dependencies = [
    "pathlib",
    "tensorflow",
    "matplotlib",
    "numpy",
    "seaborn",
    "IPython",
    "gradio"
]

[project.urls]
homepage = "https://example.com/Yodi"
repository = "https://github.com/umbaji/Yodi"